# docs/swagger.json
@@ -446,42 +446,7 @@
                 }
             }
         },
-        "/v1/admin/role/permissions": {
-            "get": {
-                "security": [
-                    {
-                        "Bearer": []
-                    }
-                ],
-                "description": "获取指定角色的权限列表",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "权限模块"
-                ],
-                "summary": "获取角色权限",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "角色名称",
-                        "name": "role",
-                        "in": "query",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/nunu-layout-admin_api_v1.GetRolePermissionsData"
-                        }
-                    }
-                }
-            },
+        "/v1/admin/role/permission": {
             "put": {
                 "security": [
                     {
@@ -515,6 +480,43 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/nunu-layout-admin_api_v1.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/v1/admin/role/permissions": {
+            "get": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "description": "获取指定角色的权限列表",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "权限模块"
+                ],
+                "summary": "获取角色权限",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "角色名称",
+                        "name": "role",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/nunu-layout-admin_api_v1.GetRolePermissionsData"
                         }
                     }
                 }
@@ -888,6 +890,7 @@
                 },
                 "password": {
                     "type": "string",
+                    "minLength": 6,
                     "example": "123456"
                 },
                 "phone": {
@@ -896,6 +899,7 @@
                 },
                 "roles": {
                     "type": "array",
+                    "maxItems": 20,
                     "items": {
                         "type": "string"
                     },
@@ -911,12 +915,6 @@
         },
         "nunu-layout-admin_api_v1.AdminUserDataItem": {
             "type": "object",
-            "required": [
-                "email",
-                "nickname",
-                "password",
-                "username"
-            ],
             "properties": {
                 "createdAt": {
                     "type": "string"
@@ -931,10 +929,6 @@
                 "nickname": {
                     "type": "string",
                     "example": "小Baby"
-                },
-                "password": {
-                    "type": "string",
-                    "example": "123456"
                 },
                 "phone": {
                     "type": "string",
@@ -961,6 +955,7 @@
         "nunu-layout-admin_api_v1.AdminUserUpdateRequest": {
             "type": "object",
             "required": [
+                "id",
                 "username"
             ],
             "properties": {
@@ -969,7 +964,8 @@
                     "example": "1234@gmail.com"
                 },
                 "id": {
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 1
                 },
                 "nickname": {
                     "type": "string",
@@ -977,6 +973,7 @@
                 },
                 "password": {
                     "type": "string",
+                    "minLength": 6,
                     "example": "123456"
                 },
                 "phone": {
@@ -1000,6 +997,12 @@
         },
         "nunu-layout-admin_api_v1.ApiCreateRequest": {
             "type": "object",
+            "required": [
+                "group",
+                "method",
+                "name",
+                "path"
+            ],
             "properties": {
                 "group": {
                     "type": "string",
@@ -1007,6 +1010,15 @@
                 },
                 "method": {
                     "type": "string",
+                    "enum": [
+                        "GET",
+                        "POST",
+                        "PUT",
+                        "PATCH",
+                        "DELETE",
+                        "OPTIONS",
+                        "HEAD"
+                    ],
                     "example": "GET"
                 },
                 "name": {
@@ -1048,7 +1060,11 @@
         "nunu-layout-admin_api_v1.ApiUpdateRequest": {
             "type": "object",
             "required": [
-                "id"
+                "group",
+                "id",
+                "method",
+                "name",
+                "path"
             ],
             "properties": {
                 "group": {
@@ -1061,6 +1077,15 @@
                 },
                 "method": {
                     "type": "string",
+                    "enum": [
+                        "GET",
+                        "POST",
+                        "PUT",
+                        "PATCH",
+                        "DELETE",
+                        "OPTIONS",
+                        "HEAD"
+                    ],
                     "example": "GET"
                 },
                 "name": {
@@ -1103,10 +1128,6 @@
                 "nickname": {
                     "type": "string",
                     "example": "小Baby"
-                },
-                "password": {
-                    "type": "string",
-                    "example": "123456"
                 },
                 "phone": {
                     "type": "string",
@@ -1308,13 +1329,18 @@
         },
         "nunu-layout-admin_api_v1.MenuCreateRequest": {
             "type": "object",
+            "required": [
+                "name",
+                "path",
+                "title"
+            ],
             "properties": {
                 "component": {
                     "description": "绑定的组件",
                     "type": "string"
                 },
                 "hideInMenu": {
-                    "description": "是否保活",
+                    "description": "菜单是否隐藏",
                     "type": "boolean"
                 },
                 "icon": {
@@ -1367,7 +1393,7 @@
                     "type": "string"
                 },
                 "hideInMenu": {
-                    "description": "是否保活",
+                    "description": "菜单是否隐藏",
                     "type": "boolean"
                 },
                 "icon": {
@@ -1407,7 +1433,7 @@
                     "type": "string"
                 },
                 "updatedAt": {
-                    "description": "是否保活",
+                    "description": "更新时间",
                     "type": "string"
                 },
                 "url": {
@@ -1422,13 +1448,19 @@
         },
         "nunu-layout-admin_api_v1.MenuUpdateRequest": {
             "type": "object",
+            "required": [
+                "id",
+                "name",
+                "path",
+                "title"
+            ],
             "properties": {
                 "component": {
                     "description": "绑定的组件",
                     "type": "string"
                 },
                 "hideInMenu": {
-                    "description": "是否保活",
+                    "description": "菜单是否隐藏",
                     "type": "boolean"
                 },
                 "icon": {
@@ -1533,8 +1565,7 @@
             "type": "object",
             "required": [
                 "id",
-                "name",
-                "sid"
+                "name"
             ],
             "properties": {
                 "id": {
@@ -1544,10 +1575,6 @@
                 "name": {
                     "type": "string",
                     "example": "Admin"
-                },
-                "sid": {
-                    "type": "string",
-                    "example": "1"
                 }
             }
         },
